src/skiacapi/cpp/skiacapi.h

CAPI unsigned char SkGradientShaderInterpolationColorSpace_OKLab(void);
CAPI unsigned char SkGradientShaderInterpolationColorSpace_SRGB(void);
CAPI const float* SkNamedTransferFn_SRGB(void);
CAPI const float* SkNamedTransferFn_Rec2020(void);
CAPI const float* SkNamedTransferFn_PQ(void);
CAPI const float* SkNamedTransferFn_HLG(void);
CAPI const float* SkNamedGamut_SRGB(void);
CAPI const float* SkNamedGamut_AdobeRGB(void);