src/main/java/com/loadingbyte/cinecred/natives/skiacapi/skiacapi_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_OKLab()
     * }
     */
    public static MemorySegment SkGradientShaderInterpolationColorSpace_OKLab$address() {
        return SkGradientShaderInterpolationColorSpace_OKLab.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_OKLab()
     * }
     */
    public static byte SkGradientShaderInterpolationColorSpace_OKLab() {
        var mh$ = SkGradientShaderInterpolationColorSpace_OKLab.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkGradientShaderInterpolationColorSpace_OKLab");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkGradientShaderInterpolationColorSpace_SRGB {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkGradientShaderInterpolationColorSpace_SRGB");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_SRGB()
     * }
     */
    public static FunctionDescriptor SkGradientShaderInterpolationColorSpace_SRGB$descriptor() {
        return SkGradientShaderInterpolationColorSpace_SRGB.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_SRGB()
     * }
     */
    public static MethodHandle SkGradientShaderInterpolationColorSpace_SRGB$handle() {
        return SkGradientShaderInterpolationColorSpace_SRGB.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_SRGB()
     * }
     */
    public static MemorySegment SkGradientShaderInterpolationColorSpace_SRGB$address() {
        return SkGradientShaderInterpolationColorSpace_SRGB.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkGradientShaderInterpolationColorSpace_SRGB()
     * }
     */
    public static byte SkGradientShaderInterpolationColorSpace_SRGB() {
        var mh$ = SkGradientShaderInterpolationColorSpace_SRGB.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkGradientShaderInterpolationColorSpace_SRGB");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkNamedTransferFn_SRGB {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkNamedTransferFn_SRGB");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_SRGB()
     * }
     */
    public static FunctionDescriptor SkNamedTransferFn_SRGB$descriptor() {
        return SkNamedTransferFn_SRGB.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_SRGB()
     * }
     */
    public static MethodHandle SkNamedTransferFn_SRGB$handle() {
        return SkNamedTransferFn_SRGB.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_SRGB()
     * }
     */
    public static MemorySegment SkNamedTransferFn_SRGB$address() {
        return SkNamedTransferFn_SRGB.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_SRGB()
     * }
     */
    public static MemorySegment SkNamedTransferFn_SRGB() {
        var mh$ = SkNamedTransferFn_SRGB.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkNamedTransferFn_SRGB");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkNamedTransferFn_Rec2020 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkNamedTransferFn_Rec2020");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_Rec2020()
     * }
     */
    public static FunctionDescriptor SkNamedTransferFn_Rec2020$descriptor() {
        return SkNamedTransferFn_Rec2020.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_Rec2020()
     * }
     */
    public static MethodHandle SkNamedTransferFn_Rec2020$handle() {
        return SkNamedTransferFn_Rec2020.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_Rec2020()
     * }
     */
    public static MemorySegment SkNamedTransferFn_Rec2020$address() {
        return SkNamedTransferFn_Rec2020.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_Rec2020()
     * }
     */
    public static MemorySegment SkNamedTransferFn_Rec2020() {
        var mh$ = SkNamedTransferFn_Rec2020.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkNamedTransferFn_Rec2020");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkNamedTransferFn_PQ {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkNamedTransferFn_PQ");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_PQ()
     * }
     */
    public static FunctionDescriptor SkNamedTransferFn_PQ$descriptor() {
        return SkNamedTransferFn_PQ.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_PQ()
     * }
     */
    public static MethodHandle SkNamedTransferFn_PQ$handle() {
        return SkNamedTransferFn_PQ.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_PQ()
     * }
     */
    public static MemorySegment SkNamedTransferFn_PQ$address() {
        return SkNamedTransferFn_PQ.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_PQ()
     * }
     */
    public static MemorySegment SkNamedTransferFn_PQ() {
        var mh$ = SkNamedTransferFn_PQ.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkNamedTransferFn_PQ");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkNamedTransferFn_HLG {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkNamedTransferFn_HLG");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_HLG()
     * }
     */
    public static FunctionDescriptor SkNamedTransferFn_HLG$descriptor() {
        return SkNamedTransferFn_HLG.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_HLG()
     * }
     */
    public static MethodHandle SkNamedTransferFn_HLG$handle() {
        return SkNamedTransferFn_HLG.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_HLG()
     * }
     */
    public static MemorySegment SkNamedTransferFn_HLG$address() {
        return SkNamedTransferFn_HLG.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const float *SkNamedTransferFn_HLG()
     * }
     */
    public static MemorySegment SkNamedTransferFn_HLG() {
        var mh$ = SkNamedTransferFn_HLG.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkNamedTransferFn_HLG");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkNamedGamut_SRGB {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkNamedGamut_SRGB");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const float *SkNamedGamut_SRGB()
     * }
     */
    public static FunctionDescriptor SkNamedGamut_SRGB$descriptor() {
        return SkNamedGamut_SRGB.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const float *SkNamedGamut_SRGB()
     * }
     */
    public static MethodHandle SkNamedGamut_SRGB$handle() {
        return SkNamedGamut_SRGB.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const float *SkNamedGamut_SRGB()
     * }
     */
    public static MemorySegment SkNamedGamut_SRGB$address() {
        return SkNamedGamut_SRGB.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const float *SkNamedGamut_SRGB()
     * }
     */
    public static MemorySegment SkNamedGamut_SRGB() {
        var mh$ = SkNamedGamut_SRGB.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkNamedGamut_SRGB");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkNamedGamut_AdobeRGB {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkNamedGamut_AdobeRGB");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const float *SkNamedGamut_AdobeRGB()
     * }
     */
    public static FunctionDescriptor SkNamedGamut_AdobeRGB$descriptor() {
        return SkNamedGamut_AdobeRGB.DESC;
    }
